chore: ignore fastbook directory

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ machine-learning/deep-learning-specialization-coursera/course-3/materials/
 machine-learning/deep-learning-specialization-coursera/course-4/materials/
 machine-learning/deep-learning-specialization-coursera/course-5/materials/
 bp-interm-ds-bootcamp/
+fastbook/
 
 ## certificates
 certificate/
